--- a/email-subscribe/index.html
+++ b/email-subscribe/index.html
@@ -8,6 +8,8 @@
     <title>Email Subscribe</title>
 </head>
 <body>
-   <h1 class="text-3xl bg-red-100">Simple Tailwind Starter</h1> 
+   <!-- background container  -->
+   .flex.items-center.justify-center
+   
 </body>
 </html>
