--- a/pricing-cards/index.html
+++ b/pricing-cards/index.html
@@ -8,6 +8,23 @@
     <title>Pricing cards</title>
 </head>
 <body>
-   Hello 
+   <!-- Global container -->
+   <div class="flex items-center justify-center min-h-screen bg-slate-800">
+     <!-- inner container -->
+    <div class="flex flex-col my-6 space-y-6 md:space-y-0 md:space-x-6 md:flex-row md:my-0">
+        <!-- Col 1 -->
+        <div class="bg-slate-700 rounded-xl text-white">
+            <!-- upper container -->
+            <div class="p-8 mx-3 mt-3 rounded-t-xl bg-slate-800">
+                <div class="text-center uppercase">Basic</div>
+                <h2 class="mt-10 font-serif text-5xl text-center">100GB</h2>
+                <h3 class="mt-2 text-center">$1.99/Month</h3>
+                <div class="flex justify-center">
+                    <a href="#" class="inline-block px-10 py-3 my-6 text-center border border-violet-600 rounded-lg duration-200 hover:bg-violet-800 hover:border-violet-800">Purchase</a>
+                </div>
+            </div>
+        </div>
+    </div>
+   </div>
 </body>
 </html>
